[gd_scene load_steps=7 format=3 uid="uid://duywdkq0tcnra"]

[ext_resource type="Script" uid="uid://2csjfsa4noao" path="res://game/scenes/base_level.gd" id="1_cuxyw"]
[ext_resource type="Resource" uid="uid://br0g15mlkqp0p" path="res://game/resources/hints.dialogue" id="2_n88w1"]
[ext_resource type="Resource" uid="uid://bcyitiwfyenvi" path="res://game/resources/context.dialogue" id="3_5df0e"]
[ext_resource type="Script" uid="uid://cmo5qw3rubish" path="res://addons/my-ecosystem-template/buttons/anim_button.gd" id="4_fsn53"]
[ext_resource type="FontFile" uid="uid://dust7b2j2ou7" path="res://assets/font/Fira_Code_v6.2/ttf/FiraCode-Retina.ttf" id="4_n88w1"]
[ext_resource type="Texture2D" uid="uid://bt2qx8l3hgul0" path="res://assets/art/bulb.svg" id="5_5df0e"]

[node name="W1Level0" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cuxyw")
hint_dialogue = ExtResource("2_n88w1")
level_dialogue = ExtResource("3_5df0e")

[node name="CodeArea" type="CodeEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019965278
anchor_top = 0.047839507
anchor_right = 0.6510417
anchor_bottom = 0.6126543
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_n88w1")
text = "class Hi {
	void main() {
		int health = \"100\";
		print(health);
	}
}"
metadata/_edit_use_anchors_ = true

[node name="AnsArea" type="CodeEdit" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019965278
anchor_top = 0.047839507
anchor_right = 0.6510417
anchor_bottom = 0.654321
grow_horizontal = 2
grow_vertical = 2
text = "class Hi {
	void main() {
		int health = 100;
		print(health);
	}
}"
metadata/_edit_use_anchors_ = true

[node name="HintButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -133.0
offset_right = -24.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 4
text = "Hint!"
icon = ExtResource("5_5df0e")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("4_fsn53")
metadata/_custom_type_script = "uid://cmo5qw3rubish"

[node name="TipLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 561.0
offset_right = 842.0
offset_bottom = 636.0
bbcode_enabled = true
text = "[wave]Here the player has just spawned so his health must be 100, but the code fails..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutputArea" type="CodeEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 784.0
offset_top = 30.0
offset_right = 1131.0
offset_bottom = 394.0
theme_override_fonts/font = ExtResource("4_n88w1")
placeholder_text = "Output is shown here!"
editable = false
